--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "razorpay": "^2.9.2"
   },
   "scripts": {
     "start": "node server.js"
