--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.3",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
