--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,15 @@
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
