--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "razorpay": "^2.9.2",
+    "framer-motion": "^10.17.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
