--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
