--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
